updated pricing & payment section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-6eJQ4TqI1J3Is+lpqC/Z9f4iuU3nX3p5tO6m6BkFI/xpKeR5Y1H8n1EiMA4JPU6+RMEeLKhiP5ZLXQT+5+FPoQ==" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -239,7 +243,7 @@
         </div>
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="chef-member">
               <div class="member-img">
                 <!-- <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt=""> -->
@@ -251,18 +255,23 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Mode of Payment</h4>
-                <span>Any of the following</span>
-                <ol>
-                  <li>lo</li>
-                  <li>Item 2</li>
-                  <li>Item 3</li>
-                </ol>
+                <h4>Pricing and Payment</h4>
+                <ul>
+                  <li><i class="bi bi-check2-all"></i> G-Cash</li>
+                  <li><i class="bi bi-check2-all"></i> Pay-pal</li>
+                  <li><i class="bi bi-check2-all"></i> Maya</li>
+                  <li><i class="bi bi-check2-all"></i> Palawan</li>
+                  <li><i class="bi bi-check2-all"></i> Bank Transfer</li>
+                  <li><i class="bi bi-check2-all"></i> Work will start once, <span>30%</span> or the <span>agreed downpayment</span> have been sent.</li>
+                  <li><i class="bi bi-check2-all"></i> 
+                    For <span><strong>Web Development</strong></span> prices are not lower than 3k, but prices will be based on the agreed requirements, client needs, project timeline.
+                  </li>
+                </ul>
               </div>
             </div>
           </div><!-- End Chefs Member -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="chef-member">
               <div class="member-img">
                 <!-- <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt=""> -->
@@ -281,26 +290,6 @@
             </div>
           </div><!-- End Chefs Member -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="chef-member">
-              <div class="member-img">
-                <!-- <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt=""> -->
-                <div class="social" hidden>
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Video Editing</h4>
-                <span>Cook</span>
-                <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim aut architecto porro aspernatur molestiae modi.</p>
-              </div>
-            </div>
-          </div><!-- End Chefs Member -->
-
-          
 
         </div>
 
