edited payment & prices section

--- a/index.html
+++ b/index.html
@@ -255,15 +255,16 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Pricing and Payment</h4>
+                <h4>Mode of Payment</h4>
+                <span>Any of the following</span>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> G-Cash</li>
-                  <li><i class="bi bi-check2-all"></i> Pay-pal</li>
-                  <li><i class="bi bi-check2-all"></i> Maya</li>
-                  <li><i class="bi bi-check2-all"></i> Palawan</li>
-                  <li><i class="bi bi-check2-all"></i> Bank Transfer</li>
-                  <li><i class="bi bi-check2-all"></i> Work will start once, <span>30%</span> or the <span>agreed downpayment</span> have been sent.</li>
-                  <li><i class="bi bi-check2-all"></i> 
+                  <li><i class="bi bi-pin-angle-fill"></i> G-Cash</li>
+                  <li><i class="bi bi-pin-angle-fill"></i> Pay-pal</li>
+                  <!-- <li><i class="bi bi-check2-all"></i> Maya</li> -->
+                  <li><i class="bi bi-pin-angle-fill"></i> Palawan</li>
+                  <li><i class="bi bi-pin-angle-fill"></i> Bank Transfer</li>
+                  <li><i class="bi bi-pin-angle-fill"></i> Work will start once, <span>30%</span> or the <span>agreed downpayment</span> have been sent.</li>
+                  <li><i class="bi bi-pin-angle-fill"></i> 
                     For <span><strong>Web Development</strong></span> prices are not lower than 3k, but prices will be based on the agreed requirements, client needs, project timeline.
                   </li>
                 </ul>
