updated on about me section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#terms-conditions">Terms & Conditions</a></li>
+          <li hidden><a href="#terms-conditions">Terms & Conditions</a></li>
           <li><a href="#projects">Projects</a></li>
           <li hidden class="dropdown"><a href="#projects"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -90,8 +90,8 @@
         <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
           <h1 data-aos="fade-up">Hi I'm Torrexx</h1>
           <p data-aos="fade-up" data-aos-delay="100">Web Developer | Graphics Designer | Video Editor | Visual Artist</p>
-          <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="btn-book-a-table">Hire me</a>
+          <div hidden class="d-flex d-none" data-aos="fade-up" data-aos-delay="200">
+            <a href="#" hi class="btn-book-a-table">Hire me</a>
             <!-- <a href="#book-a-table" class="btn-book-a-table">Book a Table</a> -->
             <!-- <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
           </div>
@@ -130,10 +130,10 @@
           </div>
           <div class="col-lg-7 d-flex align-items-begin" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
-              <p class="fst-italic">
+              <p>
                 Hey there! I'm a junior web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
               </p>
-              <p class="fst-italic">
+              <p>
                 I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skilss in communication and dealing with questions and manage documents.
               </p>
               <br>
@@ -147,7 +147,7 @@
               </ul>
               <br>
               <p>
-                This portfolio is a showcase of my best projects so far. From web development to <span>graphic design</span>, video editing and visual arts, I've got a mix of skills to bring to the table. I'm all about collaboration and innovation, so if you've got a project in mind, let's chat and make something awesome together!
+                This portfolio is a showcase of my best projects so far. From web development to graphic design, video editing and visual arts, I've got a mix of skills to bring to the table. I'm all about collaboration and innovation, so if you've got a project in mind, let's chat and make something awesome together!
               </p>
 
               <div class="position-relative mt-4" hidden>
@@ -230,7 +230,7 @@
     
 
      <!-- ======= Chefs Section ======= -->
-     <section id="terms-conditions" class="chefs section-bg" >
+     <section id="terms-conditions" class="chefs section-bg" hidden>
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Terms & Conditions</h2>
@@ -243,7 +243,7 @@
         </div>
         <div class="row gy-4">
 
-          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 " data-aos="fade-up" data-aos-delay="100">
             <div class="chef-member">
               <div class="member-img">
                 <!-- <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt=""> -->
@@ -263,6 +263,24 @@
                   <!-- <li><i class="bi bi-check2-all"></i> Maya</li> -->
                   <li><i class="bi bi-pin-angle-fill"></i> Palawan</li>
                   <li><i class="bi bi-pin-angle-fill"></i> Bank Transfer</li>
+                </ul>
+              </div>
+            </div>
+            
+            <div class="chef-member mt-3">
+              <div class="member-img">
+                <!-- <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt=""> -->
+                <div class="social" hidden>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Pricing & Transaction</h4>
+                <span>Applicable to all services, unless specified</span>
+                <ul>
                   <li><i class="bi bi-pin-angle-fill"></i> Work will start once, <span>30%</span> or the <span>agreed downpayment</span> have been sent.</li>
                   <li><i class="bi bi-pin-angle-fill"></i> 
                     For <span><strong>Web Development</strong></span> prices are not lower than 3k, but prices will be based on the agreed requirements, client needs, project timeline.
