added social links and skype

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="col-lg-5 position-relative about-img"  style="background-image: url('assets/img/about.png');" data-aos="fade-up" data-aos-delay="150">
             <div class="call-us position-absolute">
               <h4>Request for Resume</h4>
-              <a href="#" class="btn-send-request"><i class="bi bi-send"></i>Send Request</a>
+              <a href="https://drive.google.com/file/d/1K34fx9WRUm6nWIddPgfpKlxdMu5YC2mt/view?usp=drive_link" target="_blank" class="btn-send-request"><i class="bi bi-send"></i>Send Request</a>
             </div>
           </div>
           <div class="col-lg-7 d-flex align-items-begin" data-aos="fade-up" data-aos-delay="300">
@@ -1197,7 +1197,7 @@
   <footer id="footer" class="footer">
 
     <div class="container">
-      <div class="row gy-3 justify-content-center">
+      <div class="row gy-4 justify-content-center">
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-geo-alt icon"></i>
           <div>
@@ -1209,35 +1209,26 @@
 
         </div>
 
-        <div class="col-lg-3 col-md-6 footer-links d-flex">
+        <div class="col-lg-4 col-md-6 footer-links d-flex">
           <i class="bi bi-telephone icon"></i>
           <div>
             <h4>Contact</h4>
             <p>
               <strong>Email:</strong> 10969torrexx@gmail.com<br>
               <strong>Viber:</strong> +(63)967 - 563 - 3445<br>
+              <strong>Skype</strong> <a href="https://join.skype.com/invite/vs7undulPHrs" target="_blank">https://join.skype.com/invite/vs7undulPHrs</a> <br>
             </p>
           </div>
         </div>
 
-        <!-- <div class="col-lg-3 col-md-6 footer-links d-flex" hidden>
-          <i class="bi bi-clock icon"></i>
-          <div>
-            <h4>Opening Hours</h4>
-            <p>
-              <strong>Mon-Sat: 11AM</strong> - 23PM<br>
-              Sunday: Closed
-            </p>
-          </div>
-        </div> -->
-
-        <div class="col-lg-3 col-md-6 footer-links" hidden>
+        <div class="col-lg-4 col-md-6 footer-links">
           <h4>Socials</h4>
           <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.upwork.com/freelancers/~013e5f796d2ed1badd?viewMode=1" target="_blank" class="upwork"><i class="fa-brands fa-upwork"></i></a>
           </div>
         </div>
 
@@ -1272,6 +1263,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
+  <script src="https://kit.fontawesome.com/f72787f50a.js" crossorigin="anonymous"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
