corrected the typo and added social links

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 Hey there! I'm a junior web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
               </p>
               <p>
-                I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skilss in communication and dealing with questions and manage documents.
+                I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skills in communication and dealing with questions and manage documents.
               </p>
               <br>
               <p>Mostly, I work on these kinds of projects:</p>
@@ -1227,7 +1227,7 @@
             <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/pablito-torrecampo-jr-499280194/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             <a href="https://www.upwork.com/freelancers/~013e5f796d2ed1badd?viewMode=1" target="_blank" class="upwork"><i class="fa-brands fa-upwork"></i></a>
           </div>
         </div>
