added pinterist on the social links

--- a/index.html
+++ b/index.html
@@ -1224,11 +1224,11 @@
         <div class="col-lg-4 col-md-6 footer-links">
           <h4>Socials</h4>
           <div class="social-links d-flex">
-            <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
-            <a href="https://www.linkedin.com/in/pablito-torrecampo-jr-499280194/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
+            <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
             <a href="https://www.upwork.com/freelancers/~013e5f796d2ed1badd?viewMode=1" target="_blank" class="upwork"><i class="fa-brands fa-upwork"></i></a>
+            <a href="https://www.linkedin.com/in/pablito-torrecampo-jr-499280194/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.pinterest.jp/10969torrexx/" target="_blank" class="pinterist"><i class="fa-brands fa-pinterest"></i></a>
           </div>
         </div>
 
