--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="col-lg-7 d-flex align-items-begin" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p>
-                Hey there! I'm a junior web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
+                Hey there! I'm a web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
               </p>
               <p>
                 I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skills in communication and dealing with questions and manage documents.
@@ -139,15 +139,15 @@
               <br>
               <p>Mostly, I work on these kinds of projects:</p>
               <ul>
-                <li><i class="bi bi-check2-all"></i> Personalized banner layout designs for a variety of events, including but not limited to birthday parties and reunions.</li>
+                <li><i class="bi bi-check2-all"></i> Web applications tailored for business, for an organization or personal projects, exemplifying innovative solutions to complex problems.</li>
+                <li><i class="bi bi-check2-all"></i> Personalized banner layout designs for a variety of events, including but not limited to business and parties or other events.</li>
                 <li><i class="bi bi-check2-all"></i> Compelling promotional videos to enhance and spotlight various occasions and events.</li>
-                <li><i class="bi bi-check2-all"></i> Web applications tailored for thesis or capstone projects, exemplifying innovative solutions to complex problems.</li>
                 <li><i class="bi bi-check2-all"></i> Template layouts for power point presentations.</li>
                 <li><i class="bi bi-check2-all"></i> Writing manuscripts for capstone projects and research.</li>
               </ul>
               <br>
               <p>
-                This portfolio is a showcase of my best projects so far. From web development to graphic design, video editing and visual arts, I've got a mix of skills to bring to the table. I'm all about collaboration and innovation, so if you've got a project in mind, let's chat and make something awesome together!
+                This portfolio is a showcase of my best projects so far. From web development to graphic design, video editing and visual arts, I've got a mix of skills to bring. I'm all about collaboration and innovation, so if you've got a project in mind, reach out and make something awesome together!
               </p>
 
               <div class="position-relative mt-4" hidden>
@@ -175,7 +175,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row mb-4 justify-content-center">
           <p class="text-center custom-header">
-            Looking for a dynamic professional to enhance your project? I specialize in <span>web development</span>, <span>graphics design</span>, <span>video editing</span>, and <span>visual arts</span>. With a passion for artistry and a knack for innovation, I'm not just a service provider but a collaborative partner. Whether it's coding, crafting designs, or video editing, I bring creativity and expertise to every task. Open to remote collaborations, I am ready to contribute to the success of your projects. Let's turn ideas into reality together!
+            Looking for a dynamic professional to enhance your project? I specialize in <span>web development</span>, <span>graphics design</span>, <span>video editing</span>, and <span>visual arts</span>. With a passion for artistry and innovation, I'm not just a service provider but a collaborative partner. Whether it's coding, crafting designs, or telling a story, 
+            I bring creativity and expertise to every task. <span>Open to collaborations</span>, I am ready to contribute to the success of your projects. Let's turn ideas into reality together!
           </p>
         </div>
         <div class="row">
@@ -186,7 +187,7 @@
                     <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                         <i class="bi bi-code-slash"></i>
                         <h4>Web Development</h4>
-                        <p>Full-stack web developer since 2022, consistently improving, learning, and embracing new challenges.</p>
+                        <p>Full-stack web developer since 2022, consistently improving, learning, and embracing new technologies and challenges.</p>
                     </div>
                 </div><!-- End Icon Box -->
         
@@ -210,7 +211,7 @@
                     <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                         <i class="bi bi-easel2"></i>
                         <h4>Visual Arts</h4>
-                        <p>Crafting and innovating ideas, count on me to bringcreativity to life effectively and dynamically.</p>
+                        <p>Crafting and innovating ideas, count on me to bring creativity to life effectively and dynamically.</p>
                     </div>
                 </div><!-- End Icon Box -->
         
