changes in the area of expertise area

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Torrexx Portfolio</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Portfolio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -131,7 +131,8 @@
           <div class="col-lg-7 d-flex align-items-begin" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p>
-                Hey there! I'm a web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
+                Hey there! I'm a web developer with almost two years of experience in full stack development. 
+                I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
               </p>
               <p>
                 I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skills in communication and dealing with questions and manage documents.
@@ -140,10 +141,9 @@
               <p>Mostly, I work on these kinds of projects:</p>
               <ul>
                 <li><i class="bi bi-check2-all"></i> Web applications tailored for business, for an organization or personal projects, exemplifying innovative solutions to complex problems.</li>
-                <li><i class="bi bi-check2-all"></i> Personalized banner layout designs for a variety of events, including but not limited to business and parties or other events.</li>
+                <li><i class="bi bi-check2-all"></i> Personalized banner layout designs for a variety of events, including but not limited to, business and parties or other events.</li>
                 <li><i class="bi bi-check2-all"></i> Compelling promotional videos to enhance and spotlight various occasions and events.</li>
                 <li><i class="bi bi-check2-all"></i> Template layouts for power point presentations.</li>
-                <li><i class="bi bi-check2-all"></i> Writing manuscripts for capstone projects and research.</li>
               </ul>
               <br>
               <p>
@@ -175,7 +175,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row mb-4 justify-content-center">
           <p class="text-center custom-header">
-            Looking for a dynamic professional to enhance your project? I specialize in <span>web development</span>, <span>graphics design</span>, <span>video editing</span>, and <span>visual arts</span>. With a passion for artistry and innovation, I'm not just a service provider but a collaborative partner. Whether it's coding, crafting designs, or telling a story, 
+            Looking for a dynamic professional to enhance your project? I specialize in <span>web development</span>, <span>graphics design</span>, <span>video editing</span>, and <span>visual arts</span>. With a passion for artistry and innovation, 
+            I'm not just a service provider but a collaborative partner. Whether it's coding, crafting designs, or telling a story, 
             I bring creativity and expertise to every task. <span>Open to collaborations</span>, I am ready to contribute to the success of your projects. Let's turn ideas into reality together!
           </p>
         </div>
@@ -187,7 +188,7 @@
                     <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                         <i class="bi bi-code-slash"></i>
                         <h4>Web Development</h4>
-                        <p>Full-stack web developer since 2022, consistently improving, learning, and embracing new technologies and challenges.</p>
+                        <p>As a fullstack web developer, I mostly use Laravel, Vue JS and MySQL as my stack but I'm open to technologies that a project should require.</p>
                     </div>
                 </div><!-- End Icon Box -->
         
