--- a/index.html
+++ b/index.html
@@ -404,22 +404,25 @@
             <div class="row col-12 project">
 
               <div class="col-lg-4 menu-item">
-                <div class="project-box">
-                  <h4>Sogod Travels <span class="new-icon">New</span></h4>
+                <div class="project-box ">
+                  <h4>SLSU Procurement Management Information System</h4>
                   <p class="ingredients">
-                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                    I have been an integral member of the procurement management system team at Southern Leyte State University. Our primary responsibilities include the development, maintenance, and continuous enhancement of the system's code and database structure. This project has been an ongoing endeavor for over a year, with the overarching goal of automating the procurement process for the university, streamlining operations, and increasing efficiency.
                   </p>
                   <div class="side-by-side">
+                    <a href="assets/img/project/web_developer/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
                     <div hidden>
-                      <a href="assets/img/project/web_developer/001A.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001B.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001C.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001D.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002B.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002C.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002D.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002E.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002F.jpg" class="glightbox"></a>
                     </div>
-                    <a href="assets/img/project/web_developer/001A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
-                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                    <a href="https://procurement.southernleytestateu.edu.ph/login" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
+
+               
 
                 <div class="project-box">
                   <h4>Message Board</h4>
@@ -449,26 +452,28 @@
                   </div>
                 </div>
 
-                <div class="project-box">
-                  <h4>Library Management System</h4>
-                  <p class="ingredients">
-                    During the challenging times of the COVID pandemic, I embarked on a project to create a library management system using C#. This project had a singular focus: to implement comprehensive CRUD (Create, Read, Update, Delete) operations while ensuring an aesthetically pleasing user interface. It was a testament to the importance of digital tools for managing resources efficiently, even in times of adversity.
-                  </p>
-                  <div class="side-by-side">
-                    <a href="assets/img/project/web_developer/010A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
-                    <div hidden>
-                      <a href="assets/img/project/web_developer/010B.jpg" class="glightbox"><img src="assets/img/project/web_developer/010B.jpg" class="menu-img img-fluid" alt=""></a>
-                      <a href="assets/img/project/web_developer/010C.jpg" class="glightbox"><img src="assets/img/project/web_developer/010C.jpg" class="menu-img img-fluid" alt=""></a>
-                      <a href="assets/img/project/web_developer/010D.jpg" class="glightbox"><img src="assets/img/project/web_developer/010D.jpg" class="menu-img img-fluid" alt=""></a>
-                      <a href="assets/img/project/web_developer/010E.jpg" class="glightbox"><img src="assets/img/project/web_developer/010E.jpg" class="menu-img img-fluid" alt=""></a>
-                      <a href="assets/img/project/web_developer/010F.jpg" class="glightbox"><img src="assets/img/project/web_developer/010F.jpg" class="menu-img img-fluid" alt=""></a>
-                    </div>
-                  </div>
-                </div>
+               
 
               </div><!-- end first column -->
 
               <div class="col-lg-4 menu-item">
+                <div class="project-box">
+                  <h4>Sogod Travels</h4>
+                  <p class="ingredients">
+                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                  </p>
+                  <div class="side-by-side">
+                    <div hidden>
+                      <a href="assets/img/project/web_developer/001A.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001B.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001C.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001D.jpg" class="glightbox"></a>
+                    </div>
+                    <a href="assets/img/project/web_developer/001A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+
                 <div class="project-box">
                   <h4>Clothing Cart Online</h4>
                   <p class="ingredients">
@@ -481,24 +486,6 @@
                       <a href="assets/img/project/web_developer/003C.jpg" class="glightbox"></a>
                       <a href="assets/img/project/web_developer/003D.jpg" class="glightbox"></a>
                     </div>
-                  </div>
-                </div>
-
-                <div class="project-box ">
-                  <h4>SLSU Procurement Management Information System</h4>
-                  <p class="ingredients">
-                    I have been an integral member of the procurement management system team at Southern Leyte State University. Our primary responsibilities include the development, maintenance, and continuous enhancement of the system's code and database structure. This project has been an ongoing endeavor for over a year, with the overarching goal of automating the procurement process for the university, streamlining operations, and increasing efficiency.
-                  </p>
-                  <div class="side-by-side">
-                    <a href="assets/img/project/web_developer/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
-                    <div hidden>
-                      <a href="assets/img/project/web_developer/002B.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/002C.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/002D.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/002E.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/002F.jpg" class="glightbox"></a>
-                    </div>
-                    <a href="https://procurement.southernleytestateu.edu.ph/login" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
 
@@ -515,6 +502,23 @@
                       <a href="assets/img/project/web_developer/008D.jpg" class="glightbox"><img src="assets/img/project/web_developer/008D.jpg" class="menu-img img-fluid" alt=""></a>
                       <a href="assets/img/project/web_developer/008E.jpg" class="glightbox"><img src="assets/img/project/web_developer/008E.jpg" class="menu-img img-fluid" alt=""></a>
                       <a href="assets/img/project/web_developer/008F.jpg" class="glightbox"><img src="assets/img/project/web_developer/008F.jpg" class="menu-img img-fluid" alt=""></a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="project-box">
+                  <h4>Library Management System</h4>
+                  <p class="ingredients">
+                    During the challenging times of the COVID pandemic, I embarked on a project to create a library management system using C#. This project had a singular focus: to implement comprehensive CRUD (Create, Read, Update, Delete) operations while ensuring an aesthetically pleasing user interface. It was a testament to the importance of digital tools for managing resources efficiently, even in times of adversity.
+                  </p>
+                  <div class="side-by-side">
+                    <a href="assets/img/project/web_developer/010A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <div hidden>
+                      <a href="assets/img/project/web_developer/010B.jpg" class="glightbox"><img src="assets/img/project/web_developer/010B.jpg" class="menu-img img-fluid" alt=""></a>
+                      <a href="assets/img/project/web_developer/010C.jpg" class="glightbox"><img src="assets/img/project/web_developer/010C.jpg" class="menu-img img-fluid" alt=""></a>
+                      <a href="assets/img/project/web_developer/010D.jpg" class="glightbox"><img src="assets/img/project/web_developer/010D.jpg" class="menu-img img-fluid" alt=""></a>
+                      <a href="assets/img/project/web_developer/010E.jpg" class="glightbox"><img src="assets/img/project/web_developer/010E.jpg" class="menu-img img-fluid" alt=""></a>
+                      <a href="assets/img/project/web_developer/010F.jpg" class="glightbox"><img src="assets/img/project/web_developer/010F.jpg" class="menu-img img-fluid" alt=""></a>
                     </div>
                   </div>
                 </div>
