--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
               <div class="col-lg-4 menu-item">
                 <div class="project-box ">
-                  <h4>SLSU Procurement Management Information System</h4>
+                  <h4>Native Camp.net</h4>
                   <p class="ingredients">
                     I have been an integral member of the procurement management system team at Southern Leyte State University. Our primary responsibilities include the development, maintenance, and continuous enhancement of the system's code and database structure. This project has been an ongoing endeavor for over a year, with the overarching goal of automating the procurement process for the university, streamlining operations, and increasing efficiency.
                   </p>
@@ -452,25 +452,39 @@
                   </div>
                 </div>
 
-               
-
+                <div class="project-box">
+                  <h4>Attendance Management System</h4>
+                  <p class="ingredients">
+                    I was also commissioned as a developer to create an attendance system for a school project, completing the task within a swift three-day timeframe using Laravel 10. The system boasts straightforward functionalities, enabling the addition of students and teachers, the creation of classes, and the assignment of students to respective classes. Moreover, it allows teachers to efficiently update student attendance for each class on a daily basis. The system also features a comprehensive overview, displaying the total number of absences for each class. 
+                 </p>
+                  <div class="side-by-side">
+                    <a href="assets/img/project/web_developer/004A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <div hidden>
+                      <a href="assets/img/project/web_developer/004B.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/004C.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/004D.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/004E.jpg" class="glightbox"></a>
+                    </div>
+                  </div>
+                </div>
               </div><!-- end first column -->
 
               <div class="col-lg-4 menu-item">
-                <div class="project-box">
-                  <h4>Sogod Travels</h4>
+                <div class="project-box ">
+                  <h4>SLSU Procurement Management Information System</h4>
                   <p class="ingredients">
-                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                    I have been an integral member of the procurement management system team at Southern Leyte State University. Our primary responsibilities include the development, maintenance, and continuous enhancement of the system's code and database structure. This project has been an ongoing endeavor for over a year, with the overarching goal of automating the procurement process for the university, streamlining operations, and increasing efficiency.
                   </p>
                   <div class="side-by-side">
+                    <a href="assets/img/project/web_developer/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
                     <div hidden>
-                      <a href="assets/img/project/web_developer/001A.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001B.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001C.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/001D.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002B.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002C.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002D.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002E.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/002F.jpg" class="glightbox"></a>
                     </div>
-                    <a href="assets/img/project/web_developer/001A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
-                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                    <a href="https://procurement.southernleytestateu.edu.ph/login" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
 
@@ -526,20 +540,23 @@
 
               <div class="col-lg-4 menu-item">
                 <div class="project-box">
-                  <h4>Attendance Management System</h4>
+                  <h4>Sogod Travels</h4>
                   <p class="ingredients">
-                    I was also commissioned as a developer to create an attendance system for a school project, completing the task within a swift three-day timeframe using Laravel 10. The system boasts straightforward functionalities, enabling the addition of students and teachers, the creation of classes, and the assignment of students to respective classes. Moreover, it allows teachers to efficiently update student attendance for each class on a daily basis. The system also features a comprehensive overview, displaying the total number of absences for each class. 
-                 </p>
+                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                  </p>
                   <div class="side-by-side">
-                    <a href="assets/img/project/web_developer/004A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
                     <div hidden>
-                      <a href="assets/img/project/web_developer/004B.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/004C.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/004D.jpg" class="glightbox"></a>
-                      <a href="assets/img/project/web_developer/004E.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001A.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001B.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001C.jpg" class="glightbox"></a>
+                      <a href="assets/img/project/web_developer/001D.jpg" class="glightbox"></a>
                     </div>
+                    <a href="assets/img/project/web_developer/001A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
+
+                
 
                 <div class="project-box">
                   <h4>Automated Scheduling System for COVID-19</h4>
