Refactor native camp portion of the project

--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
                 <div class="project-box ">
                   <h4>Native Camp.net</h4>
                   <p class="ingredients">
-                    I have been an integral member of the procurement management system team at Southern Leyte State University. Our primary responsibilities include the development, maintenance, and continuous enhancement of the system's code and database structure. This project has been an ongoing endeavor for over a year, with the overarching goal of automating the procurement process for the university, streamlining operations, and increasing efficiency.
+                    Native Camp is a ELS platform that is famous in Japan it also connects students with English teachers from around the world. It offers on-demand, real-time classes that can be accessed at any time, making it convenient for learners with varying schedules. I was tasked with developing the website's backend using CakePHP, a framework that I was unfamiliar with at the time. Despite the steep learning curve, I successfully completed the project, showcasing my adaptability and ability to quickly grasp new technologies.
                   </p>
                   <div class="side-by-side">
-                    <a href="assets/img/project/web_developer/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <a hidden href="assets/img/project/web_developer/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
                     <div hidden>
                       <a href="assets/img/project/web_developer/002B.jpg" class="glightbox"></a>
                       <a href="assets/img/project/web_developer/002C.jpg" class="glightbox"></a>
@@ -418,7 +418,7 @@
                       <a href="assets/img/project/web_developer/002E.jpg" class="glightbox"></a>
                       <a href="assets/img/project/web_developer/002F.jpg" class="glightbox"></a>
                     </div>
-                    <a href="https://procurement.southernleytestateu.edu.ph/login" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                    <a href="https://nativecamp.net/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
 
